--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-                url('01.JPG');
+                url('https://pin.it/5vmHACy9c');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -614,4 +614,5 @@ h1 {
 
 .close-btn:hover {
     background: rgba(255, 255, 255, 0.3);
+
 }
